Fix overlap and preserve aspect ratio

--- a/src/_scss/pages/homepage/features/_carousel.scss
+++ b/src/_scss/pages/homepage/features/_carousel.scss
@@ -54,7 +54,7 @@
                 width: 100%;
 
                 // within the box, we need to center the image
-                picture.feature-carousel-image__image {
+                .feature-carousel-image__image {
                     img {
                         display: block;
                         background-color: $color-white;
